<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_auth_container"
    android:padding="12dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:fontFamily="@font/space_mono_regular"
        android:gravity="center"
        android:text="One Galaxy, Multiple Conections"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="@font/space_armor"
        android:gravity="center"
        android:text="Nebula"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/email_textfield"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:id="@+id/email_textfield"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginVertical="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_edit_textfield"
        android:drawableEnd="@drawable/ic_email"
        android:fontFamily="@font/space_mono_regular"
        android:hint="@string/email"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/user_password_textfield" />


    <EditText
        android:id="@+id/user_password_textfield"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/bg_edit_textfield"
        android:drawableRight="@drawable/ic_password"
        android:fontFamily="@font/space_mono_regular"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/confirm" />

    <LinearLayout
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/checkBoxExample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/space_mono_regular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/space_mono_regular"
            android:text="Remain Conected"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Space
            android:layout_width="18dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/space_mono_regular"
            android:text="@string/esqueceu_a_senha"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginVertical="08dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="28dp"
        app:layout_constraintBottom_toTopOf="@id/orLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_login_button"
            android:fontFamily="@font/space_mono_regular"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/orLogin" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_loading_circle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:clickable="false"
            android:elevation="10dp"
            android:visibility="gone"
            app:lottie_autoPlay="false"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_02_loading" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/orLogin"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginVertical="08dp"
        android:fontFamily="@font/space_mono_regular"
        android:text="@string/or_login_with"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/googleLogin"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/ic_google_auth"
            android:contentDescription="@string/google_login_button" />

        <ImageButton
            android:id="@+id/other_button"
            android:layout_width="40dp"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:background="@drawable/ic_github_auth"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

