<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_chat_screen"
    android:orientation="vertical">

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurview"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/nav_bar_upper"
        android:clipToOutline="true"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:padding="04dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_return"
                android:contentDescription="@string/foto_de_perfil" />

            <ImageButton
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_profile_picture"
                android:contentDescription="@string/foto_de_perfil" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:text="@string/nome_de_contato"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/space_mono_regular"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:text="+55 75 98806-6952"
                    android:textColor="#ffffff"
                    android:textSize="12dp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="02dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ic_video_call"
                android:contentDescription="@string/info_button" />

            <ImageButton
                android:id="@+id/menu"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="02dp"
                android:layout_marginEnd="08dp"
                android:background="@drawable/ic_call"
                android:contentDescription="@string/info_button" />

            <ImageButton
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginTop="02dp"
                android:layout_marginEnd="08dp"
                android:background="@drawable/ic_menu"
                android:contentDescription="@string/info_button" />

        </LinearLayout>

    </eightbitlab.com.blurview.BlurView>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_navbar_down"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/mensage_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="04dp"
            android:background="@drawable/bg_search"
            android:clipToOutline="true"
            android:hint="@string/mensagem"
            android:orientation="horizontal"
            android:paddingStart="08dp"
            android:paddingEnd="08dp"
            android:stateListAnimator="@animator/scale_animation"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="RtlSymmetry">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/sticker"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/sticker_icon"
                    android:src="@drawable/ic_sticker"
                    android:stateListAnimator="@animator/scale_animation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <EditText
                    android:id="@+id/messageTextfield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/type"
                    android:inputType="textMultiLine"
                    android:scrollHorizontally="false"
                    android:stateListAnimator="@animator/scale_animation"
                    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
                    android:textColorHint="#99ffffff"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/sticker"
                    app:layout_constraintEnd_toStartOf="@id/clipButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="Autofill" />

                <ImageButton
                    android:id="@+id/clipButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_clip"
                    android:stateListAnimator="@animator/scale_animation"
                    app:layout_constraintEnd_toStartOf="@id/camera"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <ImageButton
                    android:id="@+id/camera"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_camera"
                    android:stateListAnimator="@animator/scale_animation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </eightbitlab.com.blurview.BlurView>

        <ImageButton
            android:id="@+id/send"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginBottom="04dp"
            android:layout_gravity="bottom"
            android:background="@drawable/send_button"
            android:padding="04dp"
            android:src="@drawable/ic_send"
            android:stateListAnimator="@animator/scale_animation">

        </ImageButton>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="04dp"
        android:layout_marginBottom="04dp"
        app:layout_constraintTop_toBottomOf="@id/blurview"
        app:layout_constraintBottom_toTopOf="@id/bottom_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>