<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:ignore="Typos">

    <LinearLayout
        android:id="@+id/fragment_container_view_tag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="#151515"
            android:orientation="vertical"
            android:padding="08dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/orbitron_bold"
                android:text="@string/timeskip2"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_profile_picture"
                android:contentDescription="@string/profileimage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".Fragments.Fragment_03_AllChats" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#151515">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_selected"
                    android:contentDescription="@string/profileimage"
                    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
                    android:src="@drawable/ic_inbox"
                    android:stateListAnimator="@animator/scale_animation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/conversas"
                    android:textAlignment="center"
                    android:textColor="@color/white">

                </TextView>

            </LinearLayout>

            <Space
                android:layout_width="32dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/profileimage"
                    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
                    android:src="@drawable/ic_contact_list"
                    android:stateListAnimator="@animator/scale_animation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Contatos"
                    android:textAlignment="center"
                    android:textColor="@color/white">

                </TextView>
            </LinearLayout>

            <Space
                android:layout_width="32dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/profileimage"
                    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
                    android:src="@drawable/ic_call"
                    android:stateListAnimator="@animator/scale_animation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Ligações"
                    android:textAlignment="center"
                    android:textColor="@color/white">

                </TextView>


            </LinearLayout>

            <Space
                android:layout_width="32dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/profileimage"
                    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
                    android:src="@drawable/ic_archived"
                    android:stateListAnimator="@animator/scale_animation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/arquivados"
                    android:textAlignment="center"
                    android:textColor="@color/white">

                </TextView>


            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>